# BroadSaliency

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
featureExtra/: CMakeLists.txt
featureExtra/include/: definition.h  generic.h  hog.h  host.h  lbp.h  mathop.h  random.h  slic.h  spGraph.h  spStat.h  vlfloat.h
featureExtra/src/: generic.c  hog.c  host.c  lbp.c  mathop.c  slic.cpp  spGraph.cpp  spStat.cpp
fig/: A_temple.pptx
python/: README.md  evaluate.py  inference.py  train.csv  train.py
python/model/: Model.py  __init__.py  extending_pytorch.py  load_data.py
python/utils/: __init__.py  clean.sh  extrafeature.pxd  extrafeature.pyx  mat_test.py  opencv_impl.cpp  opencv_mat.pxd  opencv_mat.pyx  setup.py  supercrf.pxd  supercrf.pyx  test.py  test_crf.py
supercrf/: CMakeLists.txt
supercrf/include/: blsCut.h  crfinference.h  grabcut.h  graph.hpp
supercrf/src/: blsCut.cpp  crfinference.cpp  grabcut.cpp
test/: CMakeLists.txt  test.cpp
